# claude-search

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  file-suggestion.sh.original
.github/workflows/: ci.yml  release.yml
src/: input.rs  main.rs  matcher.rs  walker.rs
tests/: integration.rs
