[package]
name = "claude-search"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ignore = "0.4.25"
nucleo-matcher = "0.3.1"
mimalloc = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
